--- a/html/index.html
+++ b/html/index.html
@@ -6,15 +6,19 @@
     <link rel="stylesheet" type="text/css" href="../css/all.css">
   </head>
   <body>
-    <div id="video-stream">
-      <!-- <video src="rtsp://andrew1121:panaga1121@192.168.1.107:554//h264Preview_01_main">
-      </video> -->
+    <div class="stream-content">
+      <div id="video-stream" class="component">
+        <!-- <video src="rtsp://andrew1121:panaga1121@192.168.1.107:554//h264Preview_01_main">
+        </video> -->
+      </div>
+      <div class="control-panel component">
+        <a href="#" id="btn-up" class="control-btn"></a>
+        <a href="#" id="btn-down" class="control-btn"></a>
+        <a href="#" id="btn-left" class="control-btn"></a>
+        <a href="#" id="btn-right" class="control-btn"></a>
+        <a href="#" id="btn-test">TEST</a>
+      </div>
     </div>
-    <a href="#" id="btn-up" class="control-btn">UP</a>
-    <a href="#" id="btn-down" class="control-btn">DOWN</a>
-    <a href="#" id="btn-left" class="control-btn">LEFT</a>
-    <a href="#" id="btn-right" class="control-btn">RIGHT</a>
-    <a href="#" id="btn-test" class="control-btn">TEST</a>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="../js/jquery.network-camera.js"></script>
     <script src="../js/all.js"></script>
